# profile.mobile.platform.core.uifw.efl-theme-tizen-mobile

./: .gitignore  AUTHORS  COPYING  COPYING.Flora  LICENSE  Makefile  Makefile.am  configure.ac
mobile/: FHD-inc.edc  HD-inc.edc  HVGA-inc.edc  Makefile  Makefile.am  WVGA-inc.edc  color_classes.edc  default-mobile.edc  default.edc  efl-theme-tizen-mobile.edc  qHD-inc.edc  tizen.edc
mobile/debian/: changelog  control  efl-theme-tizen-dev.install  rules
mobile/default/inc/: tizen-default-inc.edc
mobile/enlightenment/: comp.edc  pointer.edc
mobile/themes/: tizen.edc
mobile/themes/inc/: tizen-dark-inc.edc  tizen-light-inc.edc
mobile/themes/widgets/: access.edc  badge.edc  bg.edc  bubble.edc  button.edc  check.edc  colorselector.edc  conformant.edc  ctxpopup.edc  datetime.edc  diskselector.edc  entry.edc  gengrid.edc  index.edc  label.edc  layout.edc  map.edc  multibuttonentry.edc  naviframe.edc  notify.edc  panes.edc  photocam.edc  popup.edc  progressbar.edc  radio.edc  scroller.edc  segmentedcontrol.edc  selectioninfo.edc  slider.edc  tickernoti.edc  toolbar.edc
mobile/widgets/: bg.edc  button.edc  calendar.edc  check.edc  colorselector.edc  conform.edc  ctxpopup.edc  datetime.edc  entry.edc  flipselector.edc  focus_highlight.edc  gengrid.edc  genlist.edc  genlist_macro.edc  hover.edc  index.edc  label.edc  layout.edc  list.edc  multibuttonentry.edc  naviframe.edc  popup.edc  progressbar.edc  radio.edc  scroller.edc  slider.edc  spinner.edc  toolbar.edc  win.edc
mobile/widgets_default/: a11y_highlight.edc  bubble.edc  button.edc  ews.edc  focus_highlight.edc  frame.edc  gengrid.edc  genlist.edc  genlist_macro.edc  hover.edc  icon.edc  list.edc  notify.edc  panes.edc  photocam.edc  player.edc  progressbar.edc  spinner.edc  thumb.edc  win.edc
themes/: Makefile  Makefile.am  efl-theme-tizen-mobile.edc  inc.edc  nbeat.edc  nbeat.edj  tizen.edc
themes/default/inc/: tmp-inc.edc  (+1 more)
themes/groups/: actionslider.edc  animatedicon.edc  badge.edc  bg.edc  bubble.edc  button.edc  calendar.edc  check.edc  colorpalette.edc  colorselector.edc  conformant.edc  controlbar.edc  ctxpopup.edc  datefield.edc  dayselector.edc  dialoguegroup.edc  diskselector.edc  editfield.edc  entry.edc  gengrid.edc  imageslider.edc  index.edc  label.edc  layout.edc  map.edc  multibuttonentry.edc  multisense_haptic.edc  multisense_sound.edc  multisense_ui.edc  naviframe.edc  navigationbar.edc  navigationbar_ex.edc  nocontents.edc  pagecontrol.edc  panes.edc  photocam.edc  popup.edc  progressbar.edc  radio.edc  scroller.edc  (+10 more)
themes/inc/: nbeat-black-hd-inc.edc  nbeat-black-inc.edc  nbeat-blue-inc.edc  nbeat-green-inc.edc  nbeat-hd-inc.edc  nbeat-inc.edc  nbeat-purple-inc.edc  tizen-black-hd-inc.edc  tizen-black-inc.edc  tizen-dark-inc.edc  tizen-hd-inc.edc  tizen-inc.edc  tizen-light-inc.edc
themes/tables/: ChangeableColorTable.xml  FontInfoTable.xml  HsvColorTable.xml  InputColors.src  color.src
themes/widgets/: access.edc  actionslider.edc  badge.edc  bg.edc  bubble.edc  button.edc  calendar.edc  check.edc  colorpalette.edc  colorselector.edc  conformant.edc  controlbar.edc  copypaste.edc  ctxpopup.edc  datefield.edc  datetime.edc  dayselector.edc  diskselector.edc  editfield.edc  entry.edc  gengrid.edc  genlist.edc  genlist_macro.edc  imageslider.edc  index.edc  label.edc  layout.edc  map.edc  multibuttonentry.edc  multisense_haptic.edc  multisense_ui.edc  naviframe.edc  nocontents.edc  notify.edc  pagecontrol.edc  panel.edc  panes.edc  photocam.edc  popup.edc  progressbar.edc  (+10 more)
themes/widgets_default/: actionslider.edc  border.edc  bubble.edc  button.edc  check.edc  default_macro.edc  flipselector.edc  gengrid.edc  hover.edc  index.edc  list.edc  map.edc  menu.edc  multisense_sound.edc  photo.edc  progressbar.edc  segmentedcontrol.edc  slider.edc  toolbar.edc  tooltip.edc
(+355 files in other folders)
