#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([efl-theme-tizen-mobile], [0.1], [jae.hwan.kim@samsung.com])

AM_INIT_AUTOMAKE([foreign])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 themes/Makefile])
AC_OUTPUT
